@@ -1,3 +1,6 @@
+2008-05-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/util.hxx, src/util.cxx:
+  - Moved builtin to_string and from_string specializations into traits class.
 2008-05-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/prepared_statement.hxx, include/pqxx/result.hxx,
  include/pqxx/util.hxx:
